Allow migrations to be used on a non-QA db, fix issue with core/0008

--- a/docker/docker-compose.local.yml
+++ b/docker/docker-compose.local.yml
@@ -60,6 +60,7 @@ services:
       - MYSQL_PASSWORD=kogneato
     volumes:
       - ./config/mysql/override.cnf:/etc/mysql/conf.d/override.cnf
+      - ./backup.sql:/backup.sql
 
 volumes:
   # static_files: {} # compiled js/css and uploaded widgets
