--- a/docker/config/nginx/nginx-production.conf
+++ b/docker/config/nginx/nginx-production.conf
@@ -135,9 +135,10 @@ http {
 
         # Directives to send expires headers and turn off 404 error logging.
         location ~* ^.+\.(ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf|js|css|json|obj)$ {
-            access_log off;
+            access_log    off;
             log_not_found off;
-            expires max;
+            expires       1w;
+            add_header Cache-Control "max-age=604800, public";
         }
 
         # deny direct access to any php files
