Very basic widget functionality ported!

--- a/docker/config/nginx/sites-enabled/site.conf
+++ b/docker/config/nginx/sites-enabled/site.conf
@@ -47,4 +47,11 @@ server {
 		autoindex on;
 		# expires 1d;
 	}
+
+	# In the dev environment, js and css assets are emitted to public/dist instead of public/
+    # However, server pages will expect them to be in public/js or public/css instead
+    # Redirect requests for these assets to public/dist
+    location ~* ^\/(?:js|css)\/.+\.(?:js|css)$ {
+        proxy_pass http://$server_addr/dist$uri;
+    }
 }
