Rename some backend functions, testing to get score screen working

--- a/docker/config/nginx/sites-enabled/site.conf
+++ b/docker/config/nginx/sites-enabled/site.conf
@@ -48,6 +48,12 @@ server {
 		# expires 1d;
 	}
 
+    # Temp? rule to prevent django's 404 page from appearing on static assets
+    # Firefox freaks out when its expecting a .js file and it gets a django's html instead
+	location /widget/ {
+	    try_files $uri =404;
+	}
+
 	# In the dev environment, js and css assets are emitted to public/dist instead of public/
     # However, server pages will expect them to be in public/js or public/css instead
     # Redirect requests for these assets to public/dist
