--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-test-renderer": "^17.0.2",
     "sass": "^1.69.5",
     "sass-loader": "^13.2.0",
+    "string-replace-loader": "^3.1.0",
     "webpack": "^5.76.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
