Fixed most auto-fixable PEP/Flake8 errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
 max_line_length = 120
-exclude = migrations, src
-ignore = W503, E203
+exclude = migrations, src, app/venv, node_modules
+ignore = W503, E203, E128, E124
 # max-complexity = 10
