--- a/.github/workflows/publish_widget_dependencies.yml
+++ b/.github/workflows/publish_widget_dependencies.yml
@@ -10,8 +10,10 @@ jobs:
         with:
           node-version: '18.13.0'
           registry-url: 'https://registry.npmjs.org'
-      - run: npm install
-      - run: npm run build
-      - run: npm publish public/dist
+      - run: yarn install
+      - run: yarn build
+      - run: yarn publish public/dist
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          YARN_NPM_REGISTRY_SERVER: https://registry.npmjs.org
+          YARN_NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
