--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+	"@cfaester/enzyme-adapter-react-18": "^0.8.0",
     "@testing-library/dom": "7.31.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "11.2.7",
@@ -46,7 +47,6 @@
     "core-js": "3",
     "css-loader": "^6.7.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "husky": "^4.2.5",
     "jest": "^29.3.1",
@@ -58,7 +58,7 @@
     "nodemon": "^2.0.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "^18.3.1",
     "sass": "^1.69.5",
     "sass-loader": "^13.2.0",
     "webpack": "^5.76.0",
