--- a/docker/config/nginx/sites-enabled/site.conf
+++ b/docker/config/nginx/sites-enabled/site.conf
@@ -42,6 +42,11 @@ server {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
 
+	location /static/img {
+	    try_files /var/www/html/staticfiles/theme/img /var/www/html/staticfiles/img;
+        autoindex on;
+	}
+
 	location /static {
 		alias /var/www/html/staticfiles;
 		autoindex on;
