--- a/docker/config/nginx/sites-enabled/site.conf
+++ b/docker/config/nginx/sites-enabled/site.conf
@@ -42,10 +42,12 @@ server {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
 
-	location /static/img {
-	    try_files /var/www/html/staticfiles/theme/img /var/www/html/staticfiles/img;
+    # Automatically check to see if an image theme override exists, then fall back to default
+    location ~/static/img/(.*)$ {
+        try_files /theme/img/$1 /img/$1;
         autoindex on;
-	}
+        # expires 1d;
+    }
 
 	location /static {
 		alias /var/www/html/staticfiles;
