--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,6 @@ public/js/
 
 # docker override is now untracked as of v10.3.0
 docker/docker-compose.override.yml
+
+#  sql files that may contian sensitive information
+*.sql
