--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 Django==5.0.1
 mimetypes-magic==0.4.30
 mysqlclient==2.2.4
+python-dateutil==2.9.0
 setuptools==69.0.3
 sqlparse==0.4.4
 uWSGI==2.0.23
