--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -38,6 +38,8 @@ services:
       - MYSQL_PORT=3306
       - EMAIL_HOST=host.docker.internal
       - EMAIL_PORT=1025
+    env_file:
+      - .env
     volumes:
       - ../app:/var/www/html
       - uploaded_widgets_django:/var/www/html/staticfiles/widget/
