--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,7 @@ public/dist/*
 !public/dist/path.js
 !public/dist/README.md
 
-**/__pycache__/**
+__pycache__
 **/*.log
 app/materia/settings.py
 **/venv
