#17 Initial step - media importer works, uploading/deleting/restoring media works. Hard-coded a modified 'file' media driver approach, will need to relocate code into its own driver and write additional drivers. Adjustments to NGINX config to allow large file uploads. Potentially unrelated flake8/black/isort fixes to modified files.

--- a/docker/config/nginx/sites-enabled/site.conf
+++ b/docker/config/nginx/sites-enabled/site.conf
@@ -2,6 +2,8 @@ server {
 	listen *:80;
 	server_name default;
 
+	client_max_body_size 20M;
+
 	root /var/www/html/staticfiles;
 	index index.html;
 
