--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,14 +1,16 @@
 asgiref==3.7.2
 Django==5.0.1
+django-webpack-loader==0.7.0
+djangorestframework==3.15.2
 mimetypes-magic==0.4.30
 mysqlclient==2.2.4
+pillow==11.1.0
 python-dateutil==2.9.0
+pytz==2024.1
+PyYAML==6.0.1
 setuptools==69.0.3
+six==1.17.0
 sqlparse==0.4.4
 uWSGI==2.0.23
 wheel==0.42.0
-pytz==2024.1
-PyYAML==6.0.1
-django-webpack-loader==0.7.0
-djangorestframework==3.15.2
-whitenoise
+whitenoise==6.9.0
