--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,16 +1,21 @@
 asgiref==3.7.2
+boto3==1.37.23
+botocore==1.37.23
 Django==5.0.1
 django-webpack-loader==0.7.0
 djangorestframework==3.15.2
+jmespath==1.0.1
 mimetypes-magic==0.4.30
 mysqlclient==2.2.4
 pillow==11.1.0
 python-dateutil==2.9.0
 pytz==2024.1
 PyYAML==6.0.1
+s3transfer==0.11.4
 setuptools==69.0.3
 six==1.17.0
 sqlparse==0.4.4
+urllib3==2.3.0
 uWSGI==2.0.23
 wheel==0.42.0
 whitenoise==6.9.0
