--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -9,6 +9,7 @@ uWSGI==2.0.23
 wheel==0.42.0
 pytz==2024.1
 PyYAML==6.0.1
+django-filter
 django-webpack-loader==0.7.0
 djangorestframework==3.15.2
 whitenoise
