#17 Adjustments to template .env file, corrected file driver not properly calling modified render function.

--- a/docker/.env_template
+++ b/docker/.env_template
@@ -1,3 +1,4 @@
+# Generative AI
 GENERATION_ENABLED=<true or false>
 GENERATION_ALLOW_IMAGES=<true or false>
 GENERATION_API_PROVIDER=<azure_openai or openai>
@@ -6,3 +7,29 @@ GENERATION_API_ENDPOINT=
 GENERATION_API_VERSION=
 GENERATION_API_MODEL=
 GENERATION_LOG_STATS=<true or false>
+
+# Asset Storage Driver
+ASSET_STORAGE_DRIVER=<"file" or "s3" or "db">
+
+# Where AWS credentials will be sourced - 'env' for .env file, 'imds' for config on host
+ASSET_STORAGE_S3_CREDENTIAL_PROVIDER=<"env" or "imds">
+
+ASSET_STORAGE_S3_REGION="us-east-1"
+ASSET_STORAGE_S3_BUCKET=""
+
+# Base S3 URL for viewing objects in-browser
+ASSET_STORAGE_S3_BASEURL=""
+
+# If using 'env' as credential provider, specify access key/secret here
+AWS_ACCESS_KEY_ID=""
+ASSET_STORAGE_S3_SECRET=""
+
+# Optional?
+AWS_SESSION_TOKEN=""
+
+# Set to false if using real S3 for local development
+DEV_ONLY_USE_FAKES3=<true or false>
+# URL of Fake S3 API endpoint when using Fake S3 for local development
+ASSET_STORAGE_S3_ENDPOINT=""
+# Optional - directory on disk to store original and resized assets
+ASSET_STORAGE_S3_BASEPATH=""
