url configs from env

--- a/docker/.env_template
+++ b/docker/.env_template
@@ -1,3 +1,11 @@
+# URLs
+
+BASE_URL = ""
+MEDIA_URL = ""
+MEDIA_UPLOAD_URL = ""
+WIDGET_URL = ""
+STATIC_CROSSDOMAIN = ""
+
 # Generative AI
 GENERATION_ENABLED=<true or false>
 GENERATION_ALLOW_IMAGES=<true or false>
