#18 Adjusting docker-compose file to add a redis container for supporting in-memory session cache. Adjusted .env template to include session driver and optional redis URL. Removed 'kick_start' and 'run' scripts in Docker directory in favor of Make commands. Added make commands to restart the Django application without recycling the Docker container, and another to remove the built image for the application container to make rebuilding it more convenient. Added support for db, file, and redis session options.

--- a/docker/.env_template
+++ b/docker/.env_template
@@ -1,10 +1,15 @@
 # URLs
-
 BASE_URL = ""
 MEDIA_URL = ""
 MEDIA_UPLOAD_URL = ""
 WIDGET_URL = ""
 STATIC_CROSSDOMAIN = ""
+
+# Optional - Session storage/cache driver, defaults to "db"
+SESSION_DRIVER = <"redis" or "file" or "db">
+
+# If using redis to cache sessions, provide a URL
+REDIS_URL=redis://redis:6379/0
 
 # Generative AI
 GENERATION_ENABLED=<true or false>
