--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,11 +3,13 @@ boto3==1.37.23
 botocore==1.37.23
 Django==5.0.1
 django-filter==25.1
+django-redis==5.4.0
 django-webpack-loader==0.7.0
 djangorestframework==3.15.2
 jmespath==1.0.1
 mimetypes-magic==0.4.30
 mysqlclient==2.2.4
+openai==1.65.2
 pillow==11.1.0
 python-dateutil==2.9.0
 pytz==2024.1
@@ -20,4 +22,3 @@ urllib3==2.3.0
 uWSGI==2.0.23
 wheel==0.42.0
 whitenoise==6.9.0
-openai==1.65.2
